# RPC-game

./: README.md
rps_game/: CMakeLists.txt
rps_game/include/: choice.h  computer.h  game.h  human.h  paper.h  paper_factory.h  player.h  rock.h  rock_factory.h  rpc_factory.h  rpc_options.h  scissor.h  scissor_factory.h  strategy.h  strategy_highest_win_rate.h  strategy_pure_random.h
rps_game/src/: computer.cc  game.cc  human.cc  main.cc  strategy_highest_win_rate.cc  strategy_pure_random.cc
visitor/: .bash_history  CMakeLists.txt
visitor/include/: area_visitor.h  circle.h  rectangle.h  shape.h  triangle.h  visitor.h
visitor/src/: area_visitor.cc  circle.cc  main.cc  rectangle.cc  triangle.cc
visitor/test/: CMakeLists.txt  circle_test.cc  rectangle_test.cc  triangle_test.cc
